test/shouldPass/controlFlow/emptyIfFullElse.pas
program Sample;
begin
  if true then else writeln('hi')
end.
