test/shouldFail/vonJonas/wrong_comments1.pas
program CommentedProgram;
begin
    ( This comment is invalid )
    writeln('wrong comments test');
end.